# http-compress

./: Cargo.toml  README.md  readme.md
sh/: init.sh
src/: cfg.rs  lib.rs
src/brotli/: decode.rs  encode.rs  fn.rs
src/brotli/decode/: fn.rs
src/brotli/encode/: fn.rs
src/compress/: const.rs  constant.rs  impl.rs  mod.rs  test.rs  type.rs
src/deflate/: decode.rs  encode.rs  fn.rs
src/deflate/decode/: fn.rs
src/deflate/encode/: fn.rs
src/gzip/: decode.rs  encode.rs  fn.rs
src/gzip/decode/: fn.rs
src/gzip/encode/: fn.rs
