[package]
name = "http-compress"
version = "2.13.2"
edition = "2024"
authors = ["eastspire <root@ltpp.vip>"] 
license = "MIT"
description = """A lightweight library for decompressing HTTP responses supporting Brotli, Deflate, and Gzip."""
keywords = ["http", "request", "response", "tcp", "redirect"]
repository = "https://github.com/eastspire/http-compress.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dependencies]
brotli = "8.0.1"
flate2 = "1.1.1"
twox-hash = "2.1.0"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
